Update MongoDB URI in env.example file

--- a/backend/env.example
+++ b/backend/env.example
@@ -3,7 +3,8 @@ PORT=3000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/movieticket
+MONGO_URI=mongodb://mongo:27017/grocerymart
+
 # For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/movieticket
 
 # JWT Configuration
@@ -12,4 +13,5 @@ JWT_EXPIRE=7d
 
 # CORS
 CORS_ORIGIN=http://localhost:8080
+
 
