--- a/backend/env.example
+++ b/backend/env.example
@@ -3,7 +3,7 @@ PORT=3000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGO_URI=mongodb://mongo:27017/grocerymart
+MONGO_URI=mongodb://mongo:27017/movieticket
 
 # For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/movieticket
 
@@ -13,5 +13,6 @@ JWT_EXPIRE=7d
 
 # CORS
 CORS_ORIGIN=http://localhost:8080
+
 
 
