--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,14 +8,22 @@ server {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/x-javascript
+        application/xml+rss
+        application/json
+        application/javascript;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Serve static files
+    # Serve SPA (React / Vue)
     location / {
         try_files $uri $uri/ /index.html;
     }
@@ -26,23 +34,20 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy API requests to backend (for Kubernetes, use service name)
-    location /api {
-        proxy_pass http://movieticket-api:80;
+    # ✅ FIX 1: API proxy (add trailing slash + namespace-safe DNS)
+    location /api/ {
+        proxy_pass http://movieticket-api.movieticket.svc.cluster.local:80/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
     }
 
-    # Health check endpoint
+    # ✅ FIX 2: Health check (same service DNS)
     location /health {
-        proxy_pass http://movieticket-api:80/health;
+        proxy_pass http://movieticket-api.movieticket.svc.cluster.local:80/health;
         access_log off;
     }
 }
-
