--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -2,10 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: movieticket-api
-  labels:
-    app: movieticket-api
+  namespace: movieticket
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: movieticket-api
@@ -19,39 +18,20 @@ spec:
           image: keerthi1110/movieticket-api:latest
           ports:
             - containerPort: 3000
-          env:
-            - name: NODE_ENV
-              value: "production"
-            - name: PORT
-              value: "3000"
-            - name: MONGODB_URI
-              value: "mongodb://movieticket-mongo:27017/movieticket"
-            - name: JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: movieticket-secret
-                  key: JWT_SECRET
-          livenessProbe:
+          envFrom:
+            - configMapRef:
+                name: movieticket-config
+            - secretRef:
+                name: movieticket-secret
+          readinessProbe:
             httpGet:
               path: /health
               port: 3000
-            initialDelaySeconds: 60
-            periodSeconds: 15
-          readinessProbe:
+            initialDelaySeconds: 15
+            periodSeconds: 5
+          livenessProbe:
             httpGet:
               path: /health
               port: 3000
             initialDelaySeconds: 30
             periodSeconds: 10
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: movieticket-api
-spec:
-  selector:
-    app: movieticket-api
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
