--- a/k8s/mongo-express.yaml
+++ b/k8s/mongo-express.yaml
@@ -1,41 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: movieticket-mongo-express
-  labels:
-    app: movieticket-mongo-express
+  name: mongo-express
+  namespace: movieticket
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: movieticket-mongo-express
+      app: mongo-express
   template:
     metadata:
       labels:
-        app: movieticket-mongo-express
+        app: mongo-express
     spec:
       containers:
         - name: mongo-express
           image: mongo-express:latest
-          ports:
-            - containerPort: 8081
           env:
             - name: ME_CONFIG_MONGODB_SERVER
               value: movieticket-mongo
-            - name: ME_CONFIG_MONGODB_PORT
-              value: "27017"
             - name: ME_CONFIG_BASICAUTH
               value: "false"
+          ports:
+            - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: movieticket-mongo-express
+  name: mongo-express
+  namespace: movieticket
 spec:
+  type: NodePort
   selector:
-    app: movieticket-mongo-express
+    app: mongo-express
   ports:
     - port: 8081
       targetPort: 8081
       nodePort: 30081
-  type: NodePort
