--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -4,9 +4,8 @@ metadata:
   name: movieticket-config
   namespace: movieticket
 data:
-  NODE_ENV: "production"
+  NODE_ENV: production
   PORT: "3000"
   JWT_EXPIRE: "7d"
-  CORS_ORIGIN: "http://localhost:8080"
-  MONGODB_URI: "mongodb://movieticket-mongo:27017/movieticket"
-
+  CORS_ORIGIN: "*"
+  MONGODB_URI: mongodb://movieticket-mongo:27017/movieticket
