--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -5,14 +5,4 @@ metadata:
   namespace: movieticket
 type: Opaque
 stringData:
-  JWT_SECRET: "your-super-secret-jwt-key-change-this-in-production-use-base64-encoded-value"
-  # MongoDB Atlas connection string (if using Atlas instead of StatefulSet)
-  # MONGODB_URI: "mongodb+srv://username:password@cluster.mongodb.net/movieticket"
-
----
-# To create secret from command line:
-# kubectl create secret generic movieticket-secret \
-#   --from-literal=JWT_SECRET='your-secret-key' \
-#   --from-literal=MONGODB_URI='your-mongodb-uri' \
-#   --namespace=movieticket
-
+  JWT_SECRET: MySuperSecretKey123
