--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,16 @@ spec:
         app: movieticket-frontend
     spec:
       containers:
-        - name: frontend
-          image: keerthi1110/movieticket-frontend:latest
-          ports:
-            - containerPort: 80
+      - name: frontend
+        image: keerthi1110/movieticket-frontend:latest
+        ports:
+        - containerPort: 80
+        volumeMounts:
+        - name: nginx-config
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: default.conf
+
+      volumes:
+      - name: nginx-config
+        configMap:
+          name: movieticket-nginx-config
