--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name _;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -9,9 +10,10 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://movieticket-api:80/;
+        proxy_pass http://movieticket-api.movieticket.svc.cluster.local/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
