--- a/k8s/grafana-dashboard.yaml
+++ b/k8s/grafana-dashboard.yaml
@@ -142,7 +142,7 @@ data:
           },
           "targets": [
             {
-              "expr": "histogram_quantile(0.95, rate(http_request_duration_ms_bucket[5m]))",
+              "expr": "histogram_quantile(0.95, rate(http_request_duration_seconds_bucket[5m])) * 1000",
               "refId": "A"
             }
           ],
@@ -209,7 +209,7 @@ data:
           },
           "targets": [
             {
-              "expr": "rate(http_requests_total{status=~\"5..\"}[5m]) / rate(http_requests_total[5m]) * 100",
+              "expr": "rate(http_requests_total{status_code=~\"5..\"}[5m]) / rate(http_requests_total[5m]) * 100",
               "refId": "A",
               "legendFormat": "Error Rate"
             }
